sec 4: listing wibble

--- a/sections/04-implementation.tex
+++ b/sections/04-implementation.tex
@@ -1101,7 +1101,7 @@ Note that the internal \code{Node}s of the \code{Tree} are defined in terms of
 itself, recursively. Instead, the tree can be parameterised by the recursive
 step:
 %
-\begin{lstlisting}[style=haskell,name=pretree]
+\begin{lstlisting}[style=haskell]
 data PreTree tree a
     | Leaf a
     | Node (tree a) (tree a)
@@ -1111,7 +1111,7 @@ and the original tree can be recovered from this definition, albeit with the
 need to unwrap the \code{Tree} constructor before exposing the \code{Leaf} and
 \code{Node} constructors of the tree itself:
 %
-\begin{lstlisting}[style=haskell,name=pretree]
+\begin{lstlisting}[style=haskell,firstnumber=4]
 data Tree a = Tree (PreTree Tree a)
 \end{lstlisting}
 
@@ -1121,7 +1121,7 @@ For example, we can define a new binary tree type that records the size of the
 subtree at each point, and any existing functions operating over the basic
 \code{PreTree} structure can still be used:
 %
-\begin{lstlisting}[style=haskell,name=pretree]
+\begin{lstlisting}[style=haskell,firstnumber=5]
 data SizedTree a = SizedTree Int (PreTree SizedTree a)
 \end{lstlisting}
 % END ASIDE }
