--- a/thesis.bib
+++ b/thesis.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Fri, 23 Aug 2013.
+%% Created using Papers on Sun, 01 Sep 2013.
 %% http://papersapp.com/papers/
 
 @book{Altenkirch:2003kz,
@@ -17,7 +17,7 @@ month = may
 @inproceedings{Chakravarty:2011fr,
 author = {Chakravarty, Manuel M T and Keller, Gabriele and Lee, Sean and McDonell, Trevor L. and Grover, Vinod},
 title = {{Accelerating Haskell array codes with multicore GPUs}},
-booktitle = {DAMP '11: Proceedings of the sixth workshop on Declarative aspects of multicore programming},
+booktitle = {DAMP '11: Proceedings of the 6th workshop on Declarative Aspects of Multicore Programming},
 year = {2011},
 publisher = { ACM  Request Permissions},
 month = jan
@@ -33,8 +33,8 @@ publisher = {ACM},
 address = {New York, NY, USA}
 }
 
-@article{Cole:2004,
-author = {Cole, Murray},
+@article{Cole:2004ff,
+author = {Cole, Murray I},
 title = {{Bringing skeletons out of the closet: a pragmatic manifesto for skeletal parallel programming}},
 journal = {Parallel Computing},
 year = {2004},
@@ -142,7 +142,7 @@ title = {{Thrust: A Parallel Template Library}}
 @inproceedings{Atkey:2009dj,
 author = {Atkey, Robert and Lindley, Sam and Yallop, Jeremy},
 title = {{Unembedding domain-specific languages}},
-booktitle = {Proceedings of the 2nd ACM SIGPLAN symposium on Haskell},
+booktitle = {Proceedings of the 2nd ACM SIGPLAN Symposium on Haskell},
 year = {2009},
 pages = {37--48},
 publisher = {ACM},
@@ -192,7 +192,7 @@ month = nov
 @inproceedings{Larsen:2011fa,
 author = {Larsen, Bradford},
 title = {{Simple Optimizations for an Applicative Array Language for Graphics Processors}},
-booktitle = {DAMP `11: Proceedings of the 6th ACM SIGPLAN workshop on Declarative Aspects of Multicore Programming},
+booktitle = {DAMP '11: Proceedings of the 6th workshop on Declarative Aspects of Multicore Programming},
 year = {2011},
 month = jan
 }
@@ -244,7 +244,7 @@ year = {1995}
 @inproceedings{Keller:2010er,
 author = {Keller, Gabriele and Chakravarty, Manuel M T and Leshchinskiy, Roman and Peyton Jones, Simon and Lippmeier, Ben},
 title = {{Regular, shape-polymorphic, parallel arrays in Haskell}},
-booktitle = {Proceedings of the 15th ACM SIGPLAN international conference on Functional programming},
+booktitle = {ICFP '10: Proceedings of the 15th ACM SIGPLAN international conference on Functional programming},
 year = {2010},
 pages = {261--272},
 publisher = {ACM},
@@ -299,7 +299,7 @@ year = {1993}
 @inproceedings{Chlipala:cn,
 author = {Chlipala, Adam},
 title = {{Parametric higher-order abstract syntax for mechanized semantics}},
-booktitle = {ICFP '08: Proceeding of the 13th ACM SIGPLAN international conference on Functional programming},
+booktitle = {ICFP '08: Proceedings of the 13th ACM SIGPLAN international conference on Functional programming},
 year = {2008},
 pages = {143--156},
 publisher = { ACM  Request Permissions},
@@ -366,10 +366,10 @@ pages = {649--658},
 month = nov
 }
 
-@article{Oliveira:2012uy,
+@inproceedings{Oliveira:2012uy,
 author = {Oliveira, Bruno C d S and Cook, William R},
 title = {{Functional programming with structured graphs}},
-journal = {ICFP `12: Proceedings of the 17th ACM SIGPLAN international conference on Functional programming},
+booktitle = {ICFP '12: Proceedings of the 17th ACM SIGPLAN international conference on Functional programming},
 year = {2012}
 }
 
@@ -382,10 +382,10 @@ publisher = { ACM  Request Permissions},
 month = oct
 }
 
-@article{Dubach:2012wc,
+@inproceedings{Dubach:2012wc,
 author = {Dubach, Christophe and Cheng, Perry and Rabbah, Rodric and Bacon, David and Fink, Stephen},
 title = {{Compiling a high-level language for GPUs: (via language support for architectures and compilers)}},
-journal = {PLDI '12: Proceedings of the 33rd ACM SIGPLAN conference on Programming Language Design and Implementation},
+booktitle = {PLDI '12: Proceedings of the 33rd ACM SIGPLAN conference on Programming Language Design and Implementation},
 year = {2012}
 }
 
@@ -416,10 +416,10 @@ pages = {179--196},
 month = jan
 }
 
-@article{Ramsey:2010wd,
+@inproceedings{Ramsey:2010wd,
 author = {Ramsey, Norman and Dias, Joao and Jones, Simon L. Peyton},
 title = {{Hoopl: a modular, reusable library for dataflow analysis and transformation}},
-journal = {Haskell '10: Proceedings of the third ACM Haskell symposium on Haskell},
+booktitle = {Haskell '10: Proceedings of the 3rd ACM SIGPLAN Symposium on Haskell},
 year = {2010}
 }
 
@@ -440,10 +440,10 @@ year = {2010},
 month = sep
 }
 
-@article{Thiemann:Es80Kvtr,
+@inproceedings{Thiemann:Es80Kvtr,
 author = {Thiemann, Peter and Chakravarty, Manuel M T},
 title = {{Agda Meets Accelerate}},
-journal = {IFL'12: Proceedings of the 24th international conference on Implementation and Application of Functional Languages},
+booktitle = {IFL'12: Proceedings of the 24th international conference on Implementation and Application of Functional Languages},
 year = {2012},
 month = aug
 }
@@ -467,9 +467,9 @@ annote = {Survey of parallel programming models, judged based on: * suitability 
 }
 
 @inproceedings{Lippmeier:2011cd,
-author = {Lippmeier, Ben and Keller, Gabriele},
+author = {Ben Lippmeier and Keller, Gabriele},
 title = {{Efficient parallel stencil convolution in Haskell}},
-booktitle = {Haskell '11: Proceedings of the 4th ACM symposium on Haskell},
+booktitle = {Haskell '11: Proceedings of the 4th ACM SIGPLAN Symposium on Haskell},
 year = {2011},
 publisher = { ACM  Request Permissions},
 month = sep
@@ -604,7 +604,7 @@ address = {New York, NY, USA}
 @inproceedings{Chakravarty:2005dx,
 author = {Chakravarty, Manuel M T and Keller, Gabriele and Jones, Simon Peyton},
 title = {{Associated type synonyms}},
-booktitle = {ICFP `05: Proceedings of the tenth ACM SIGPLAN international conference on Functional programming},
+booktitle = {ICFP '05: Proceedings of the 10th ACM SIGPLAN international conference on Functional programming},
 year = {2005},
 pages = {241--253},
 publisher = {ACM},
@@ -660,7 +660,7 @@ pages = {755--757}
 @inproceedings{Mainland:2007bl,
 author = {Mainland, Geoffrey},
 title = {{Why it's nice to be quoted}},
-booktitle = {the ACM SIGPLAN workshop},
+booktitle = {Haskell '07: Proceedings of the 2007 ACM SIGPLAN workshop on Haskell},
 year = {2007},
 pages = {73},
 publisher = {ACM Press},
@@ -688,7 +688,7 @@ month = nov
 @inproceedings{Jones:2009,
 author = {Jones Jr, Don and Marlow, Simon and Singh, Satnam},
 title = {{Parallel performance tuning for Haskell}},
-booktitle = {Haskell `09: Proceedings of the 2nd ACM SIGPLAN symposium on Haskell},
+booktitle = {Haskell '09: Proceedings of the 2nd ACM SIGPLAN Symposium on Haskell},
 year = {2009},
 pages = {81--92},
 publisher = {ACM},
@@ -699,7 +699,7 @@ annote = {Describes ThreadScope and its use to improve the performance of semi-i
 @inproceedings{Lippmeier:2012gx,
 author = {Lippmeier, Ben and Chakravarty, Manuel M T and Keller, Gabriele and Jones, Simon Peyton},
 title = {{Guiding parallel array fusion with indexed types}},
-booktitle = {Haskell '12: Proceedings of the 2012 symposium on Haskell symposium},
+booktitle = {Haskell '12: Proceedings of the 5th ACM SIGPLAN Symposium on Haskell},
 year = {2012},
 publisher = { ACM  Request Permissions},
 month = sep
@@ -802,7 +802,7 @@ annote = {A C++ class library that provides new data types and captures a series
 @inproceedings{Coutts:2007kp,
 author = {Coutts, Duncan and Leshchinskiy, Roman and Stewart, Don},
 title = {{Stream fusion: from lists to streams to nothing at all}},
-booktitle = {ICFP `07: Proceedings of the 12th ACM SIGPLAN international conference on Functional programming},
+booktitle = {ICFP '07: Proceedings of the 12th ACM SIGPLAN international conference on Functional programming},
 year = {2007},
 pages = {315--326},
 publisher = {ACM},
@@ -937,7 +937,7 @@ annote = {Deprecated.}
 @inproceedings{Marlow:2006,
 author = {Marlow, Simon},
 title = {{An extensible dynamically-typed hierarchy of exceptions}},
-booktitle = {Haskell `06: Proceedings of the 2006 ACM SIGPLAN workshop on Haskell},
+booktitle = {Haskell '06: Proceedings of the 2006 ACM SIGPLAN workshop on Haskell},
 year = {2006},
 pages = {96--106},
 publisher = {ACM},
@@ -1058,7 +1058,7 @@ annote = {A source-to-source transformation that takes a (straightforward) imple
 @inproceedings{McBride:2004jt,
 author = {McBride, Conor and McKinna, James},
 title = {{I am not a number -- I am a free variable}},
-booktitle = {Haskell `04: Proceedings of the 2004 ACM SIGPLAN workshop on Haskell},
+booktitle = {Haskell '04: Proceedings of the 2004 ACM SIGPLAN workshop on Haskell},
 year = {2004},
 pages = {1--9},
 publisher = {ACM},
@@ -1111,7 +1111,7 @@ pages = {26--29},
 annote = {Seems to be a high-level overview of the trend in the semiconductor industry -- limits of single-thread performance, and that CPUs are clearly evolving in the same direction: towards massive parallelism and "many-core" architectures.}
 }
 
-@book{Cole:1989,
+@book{Cole:1989vr,
 author = {Cole, Murray I},
 title = {{Algorithmic Skeletons: Structured Management of Parallel Computation}},
 publisher = {The MIT Press},
@@ -1211,7 +1211,7 @@ publisher = {Springer-Verlag}
 @inproceedings{Chakravarty:2000bk,
 author = {Chakravarty, Manuel M T and Keller, Gabriele},
 title = {{More types for nested data parallel programming}},
-booktitle = {ICFP `00: Proceedings of the fifth ACM SIGPLAN international conference on Functional programming},
+booktitle = {ICFP '00: Proceedings of the 5th ACM SIGPLAN international conference on Functional programming},
 year = {2000},
 pages = {94--105},
 publisher = {ACM},
@@ -1336,7 +1336,7 @@ address = {New York, NY, USA}
 @inproceedings{Jones:2007,
 author = {Jones, Simon Peyton and Wadler, Philip},
 title = {{Comprehensive comprehensions: comprehensions with `Order by' and `Group by'}},
-booktitle = {Haskell `07: Proceedings of the ACM SIGPLAN Haskell workshop},
+booktitle = {Haskell '07: Proceedings of the 2007 ACM SIGPLAN workshop on Haskell},
 year = {2007},
 pages = {61--72},
 address = {Freiburg, Germany}
@@ -1354,7 +1354,7 @@ month = sep
 @inproceedings{Marlow:2009,
 author = {Marlow, Simon and Jones, Simon Peyton and Singh, Satnam},
 title = {{Runtime Support for Multicore Haskell}},
-booktitle = {ICFP `09: Proceedings of the 14th ACM SIGPLAN international conference on Functional programming},
+booktitle = {ICFP '09: Proceedings of the 14th ACM SIGPLAN international conference on Functional programming},
 year = {2009}
 }
 
@@ -1403,7 +1403,7 @@ pages = {558--565}
 @inproceedings{Jones:2006eh,
 author = {Jones, Simon Peyton and Vytiniotis, Dimitrios and Weirich, Stephanie and Washburn, Geoffrey},
 title = {{Simple unification-based type inference for GADTs}},
-booktitle = {ICFP `06: Proceedings of the eleventh ACM SIGPLAN international conference on Functional programming},
+booktitle = {ICFP '06: Proceedings of the 11th ACM SIGPLAN international conference on Functional programming},
 year = {2006},
 pages = {50--61},
 publisher = {ACM},
@@ -1674,7 +1674,7 @@ annote = {Survey paper that examines parallel programming/processing models (gen
 @inproceedings{Lesniak:2010,
 author = {Lesniak, Michael},
 title = {{PASTHA: Parallelizing stencil calculations in Haskell}},
-booktitle = {DAMP `10: Proceedings of the 5th ACM SIGPLAN workshop on Declarative aspects of multicore programming},
+booktitle = {DAMP '10: Proceedings of the 5th workshop on Declarative Aspects of Multicore Programming},
 year = {2010},
 pages = {5--14},
 publisher = {ACM},
@@ -1684,7 +1684,7 @@ address = {New York, NY, USA}
 @inproceedings{Mainland:2010vj,
 author = {Mainland, Geoffrey and Morrisett, Greg},
 title = {{Nikola: Embedding Compiled GPU Functions in Haskell}},
-booktitle = {Haskell `10: Proceedings of the 2010 ACM SIGPLAN Symposium on Haskell},
+booktitle = {Haskell '10: Proceedings of the 3rd ACM SIGPLAN Symposium on Haskell},
 year = {2010},
 publisher = {ACM},
 address = {New York, NY, USA}
@@ -1823,7 +1823,7 @@ year = {1993}
 @inproceedings{Chakravarty:2007tc,
 author = {Chakravarty, Manuel M T and Leshchinskiy, Roman and Jones, Simon Peyton and Keller, Gabriele and Marlow, Simon},
 title = {{Data Parallel Haskell: A status report}},
-booktitle = {Declarative Aspects of Multicore Programming},
+booktitle = {DAMP '07: Proceedings of the 2nd workshop on Declarative Aspects of Multicore Programming},
 year = {2007},
 publisher = {ACM},
 month = nov,
@@ -1854,7 +1854,7 @@ annote = {Discusses a possible implementation of nested data-parallelism in Hask
 @inproceedings{Lippmeier:2013vz,
 author = {Lippmeier, Ben and Chakravarty, Manuel M T and Keller, Gabriele and Robinson, Amos},
 title = {{Data Flow Fusion with Series Expressions in Haskell}},
-booktitle = {Haskell '13: Proceedings of the 2013 symposium on Haskell},
+booktitle = {Haskell '13: Proceedings of the 6th ACM SIGPLAN Symposium on Haskell},
 year = {2013},
 month = sep
 }
@@ -2096,7 +2096,7 @@ address = {Cambridge Research Laboratory}
 @inproceedings{Coutts:2007ia,
 author = {Coutts, Duncan and Stewart, Don and Leshchinskiy, Roman},
 title = {{Rewriting Haskell strings}},
-booktitle = {Practical Aspects of Declarative Languages 8th International Symposium (PADL 2007)},
+booktitle = {PADL '07: Proceedings of the 8th International Symposium on Practical Aspects of Declarative Languages},
 year = {2007},
 pages = {50--64},
 publisher = {Springer-Verlag}
@@ -2484,7 +2484,7 @@ address = {New York, New York, USA}
 @inproceedings{Claessen:2012hl,
 author = {Claessen, Koen and Sheeran, Mary and Svensson, Bo Joel},
 title = {{Expressive Array Constructs in an Embedded GPU Kernel Programming Language}},
-booktitle = {DAMP '12},
+booktitle = {DAMP '12: Proceedings of the 7th workshop on Declarative Aspects of Multicore Programming},
 year = {2012},
 pages = {21},
 publisher = {ACM Press},
@@ -2511,11 +2511,12 @@ pages = {2825--2839},
 month = apr
 }
 
-@article{Jones:2012we,
+@inproceedings{Jones:2012we,
 author = {Jones, Will and Field, Tony and Allwood, Tristan},
 title = {{Deconstraining DSLs}},
-journal = {ICFP '12: Proceedings of the 17th ACM SIGPLAN international conference on Functional programming},
-year = {2012}
+booktitle = {ICFP '12: Proceedings of the 17th ACM SIGPLAN international conference on Functional programming},
+year = {2012},
+organization = {Department of Computing, Imperial College London}
 }
 
 @inproceedings{Hinze:2010ub,
@@ -2642,10 +2643,10 @@ year = {2012},
 pages = {3--14}
 }
 
-@article{Svenningsson:2002ws,
+@inproceedings{Svenningsson:2002ws,
 author = {Svenningsson, Josef},
 title = {{Shortcut fusion for accumulating parameters {\&} zip-like functions}},
-journal = {ICFP '02: Proceedings of the seventh ACM SIGPLAN international conference on Functional programming},
+booktitle = {ICFP '02: Proceedings of the 7th ACM SIGPLAN international conference on Functional programming},
 year = {2002}
 }
 
@@ -2656,17 +2657,17 @@ journal = {POPL '07: Proceedings of the 34th annual ACM SIGPLAN-SIGACT symposium
 year = {2007}
 }
 
-@article{Ghani:2005vz,
+@inproceedings{Ghani:2005vz,
 author = {Ghani, Neil and Johann, Patricia and Uustalu, Tarmo and Vene, Varmo},
 title = {{Monadic augment and generalised short cut fusion}},
-journal = {ICFP '05: Proceedings of the tenth ACM SIGPLAN international conference on Functional programming},
+booktitle = {ICFP '05: Proceedings of the 10th ACM SIGPLAN international conference on Functional programming},
 year = {2005}
 }
 
 @inproceedings{Harper:2012vb,
 author = {Harper, Thomas},
 title = {{A library writer's guide to shortcut fusion}},
-booktitle = {Haskell '11: Proceedings of the 4th ACM symposium on Haskell},
+booktitle = {Haskell '11: Proceedings of the 4th ACM SIGPLAN Symposium on Haskell},
 year = {2012},
 publisher = { ACM  Request Permissions},
 month = jan
