CSE printers don't like pdf-1.5

--- a/preamble.tex
+++ b/preamble.tex
@@ -4,6 +4,7 @@
 % Imports
 % ------------------------------------------------------------------------------
 
+\usepackage{pdf14}
 \usepackage[T1]{fontenc}
 \usepackage{ifpdf}
 \ifpdf
